# nemsio2nc

./: .gitignore  CMakeLists.txt  README.md  build_cmake.sh
atm/: CMakeLists.txt
atm/src/: CMakeLists.txt  gfsnc.cc  gfsnc.h  nems2nc.cc  nems2nc.h  nemsio.cc  nemsio2nc.cc
modulefiles/: hera.intel  orion.intel  wcoss_dell_p3
src/atm/: CMakeLists.txt  gfsnc.cc  gfsnc.h  nemsio_interface.f90
